# jieba-wasm

./: .gitignore  Cargo.toml  LICENSE_MIT
src/: lib.rs
www/: index.html  index.js  package-lock.json
